Fix collapsing margins issue

--- a/assets/components/ascent-wysiwyg.css
+++ b/assets/components/ascent-wysiwyg.css
@@ -17,6 +17,12 @@
 .wysiwyg-editor {
     cursor: default;
     position:relative;
+    width: 100%;
+    height: 100%;
+}
+
+.wysiwyg-editor .cke_editable {
+    overflow: auto; /* prevents collapsing margins */
 }
 
 .wysiwyg-editor .cke_editable {
